force-app/main/default/objects/EPA_StudyLeaveRequest__c/EPA_StudyLeaveRequest__c.object-meta.xml
<CustomObject>
    <label>Study Leave Request</label>
    <nameField>
        <displayFormat>SLR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Leave Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>