force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_Apprentice__c.field-meta.xml
<CustomField>
    <fullName>EPA_Apprentice__c</fullName>
    <label>Apprentice</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Study Leave Requests</relationshipLabel>
    <relationshipName>StudyLeaveRequests</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>