force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_ApprovalTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EPA_ApprovalTimestamp__c</fullName>
    <label>Approval Timestamp</label>
    <type>DateTime</type>
</CustomField>