force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_CalculatedBusinessDays__c.field-meta.xml
<CustomField>
    <fullName>EPA_CalculatedBusinessDays__c</fullName>
    <label>Calculated Business Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>