force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_CancellationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EPA_CancellationTimestamp__c</fullName>
    <label>Cancellation Timestamp</label>
    <type>DateTime</type>
</CustomField>