force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_Category__c.field-meta.xml
<CustomField>
    <fullName>EPA_Category__c</fullName>
    <label>Category</label>
    <type>Lookup</type>
    <referenceTo>EPA_LeaveCategory__c</referenceTo>
    <relationshipLabel>Study Leave Requests (Category)</relationshipLabel>
    <relationshipName>StudyLeaveRequestsByCategory</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>