force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_EndDate__c.field-meta.xml
<CustomField>
    <fullName>EPA_EndDate__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>