force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_LeaveType__c.field-meta.xml
<CustomField>
    <fullName>EPA_LeaveType__c</fullName>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Resit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>