force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_Manager__c.field-meta.xml
<CustomField>
    <fullName>EPA_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Study Leave Requests (Manager)</relationshipLabel>
    <relationshipName>StudyLeaveRequestsAsManager</relationshipName>
    <type>Lookup</type>
</CustomField>