force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_NumberOfDays__c.field-meta.xml
<CustomField>
    <fullName>EPA_NumberOfDays__c</fullName>
    <label>Number of Days</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>