force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_Reason__c.field-meta.xml
<CustomField>
    <fullName>EPA_Reason__c</fullName>
    <label>Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>