force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>EPA_RejectionReason__c</fullName>
    <label>Rejection Reason</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>