force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_RejectionTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EPA_RejectionTimestamp__c</fullName>
    <label>Rejection Timestamp</label>
    <type>DateTime</type>
</CustomField>