force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_StartDate__c.field-meta.xml
<CustomField>
    <fullName>EPA_StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <required>true</required>
</CustomField>