force-app/main/default/objects/EPA_StudyLeaveRequest__c/fields/EPA_SubmissionTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EPA_SubmissionTimestamp__c</fullName>
    <label>Submission Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>