force-app/main/default/objects/EPA_StudyLeaveRequest__c/validationRules/EPA_AdvanceNotice_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>EPA_AdvanceNotice_ValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>EPA_StartDate__c &lt; ADDMONTHS(TODAY(), 1) &amp;&amp; NOT(ISPICKVAL(EPA_Status__c, "Cancelled"))</errorConditionFormula>
    <errorDisplayField>EPA_StartDate__c</errorDisplayField>
    <errorMessage>Study leave requests must be submitted at least one month before the start date.</errorMessage>
</ValidationRule>