force-app/main/default/objects/EPA_StudyLeaveRequest__c/validationRules/EPA_ApprenticeRequired_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>EPA_ApprenticeRequired_ValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(EPA_Apprentice__c)</errorConditionFormula>
    <errorDisplayField>EPA_Apprentice__c</errorDisplayField>
    <errorMessage>Apprentice is required. Please select an apprentice for this Study Leave Request.</errorMessage>
</ValidationRule>