force-app/main/default/objects/EPA_StudyLeaveRequest__c/validationRules/EPA_CancelPastStartDate_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>EPA_CancelPastStartDate_ValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(EPA_Status__c) &amp;&amp; ISPICKVAL(EPA_Status__c, "Cancelled") &amp;&amp; EPA_StartDate__c &lt;= TODAY()</errorConditionFormula>
    <errorDisplayField>EPA_Status__c</errorDisplayField>
    <errorMessage>This request can no longer be cancelled as the leave start date has passed.</errorMessage>
</ValidationRule>