force-app/main/default/objects/EPA_StudyLeaveRequest__c/validationRules/EPA_CategoryRequired_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>EPA_CategoryRequired_ValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(EPA_Category__c)</errorConditionFormula>
    <errorDisplayField>EPA_Category__c</errorDisplayField>
    <errorMessage>Category is required. Please select a leave category for this Study Leave Request.</errorMessage>
</ValidationRule>