force-app/main/default/objects/EPA_StudyLeaveRequest__c/validationRules/EPA_EditPastStartDate_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>EPA_EditPastStartDate_ValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>(ISCHANGED(EPA_StartDate__c) || ISCHANGED(EPA_EndDate__c) || ISCHANGED(EPA_Category__c)) &amp;&amp; PRIORVALUE(EPA_StartDate__c) &lt;= TODAY()</errorConditionFormula>
    <errorDisplayField>EPA_StartDate__c</errorDisplayField>
    <errorMessage>This request can no longer be edited as the leave start date has passed.</errorMessage>
</ValidationRule>