force-app/main/default/objects/EPA_StudyLeaveRequest__c/listViews/EPA_AllRequests.listView-meta.xml
<ListView>
    <fullName>EPA_AllRequests</fullName>
    <columns>NAME</columns>
    <columns>EPA_Apprentice__c</columns>
    <columns>EPA_StartDate__c</columns>
    <columns>EPA_EndDate__c</columns>
    <columns>EPA_Category__c</columns>
    <columns>EPA_CalculatedBusinessDays__c</columns>
    <columns>EPA_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>