force-app/main/default/objects/EPA_StudyLeaveRequest__c/listViews/EPA_MyRequests.listView-meta.xml
<ListView>
    <fullName>EPA_MyRequests</fullName>
    <columns>NAME</columns>
    <columns>EPA_Apprentice__c</columns>
    <columns>EPA_StartDate__c</columns>
    <columns>EPA_EndDate__c</columns>
    <columns>EPA_Category__c</columns>
    <columns>EPA_CalculatedBusinessDays__c</columns>
    <columns>EPA_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EPA_Apprentice__c</field>
        <operation>equals</operation>
        <value>$CurrentUser</value>
    </filters>
    <label>My Requests</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>